--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="icon" type="image/svg+xml" href="./public/logo-transparent.png" />
+    <!-- <link rel="icon" type="image/svg+xml" href="./public/logo-transparent.png" /> -->
+     <link rel="icon" type="image/png" href="/logo-transparent.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TRAVENTURE</title>
+    <title>Traventure</title>
   </head>
   <body>
     <div id="root"></div>
